--- a/langs/fr_FR/sig.lang
+++ b/langs/fr_FR/sig.lang
@@ -1,7 +1,10 @@
 SigDashboard=Pilotage
 SigCurrentTurnover=Chiffre d'affaires actuel
 SigSetup=Configuration du module SIG
-SigSetupHelp=Page de configuration minimale. Aucun paramètre n'est requis pour cette première version.
+SigSetupHelp=Configuration du module SIG de pilotage de trésorerie et analyse financière.
+SigSetupHelp1=Sélectionnez le compte bancaire principal pour les analyses de trésorerie
+SigSetupHelp2=Si aucun compte n'est sélectionné, tous les comptes seront pris en compte
+SigSetupHelp3=Cette configuration affecte uniquement les pages de trésorerie du module
 ChiffreAffairesActuel=Chiffre d'affaires actuel
 Pilotage=Pilotage
 NoDataFound=Aucune donnée trouvée
@@ -10,4 +13,12 @@ SignedPropalsList=Liste des devis signés
 CARealized=CA Réalisé
 CAExpected=CA Prévu
 ExpectedTurnoverFromSignedPropals=Chiffre d'affaires prévu basé sur les devis signés
-Trésorerie=Trésorerie 
+Trésorerie=Trésorerie
+Configuration=Configuration
+SigBankAccount=Compte bancaire principal
+SigBankAccountHelp=Compte bancaire à utiliser pour les analyses de trésorerie (laisser vide pour tous)
+AllBankAccounts=Tous les comptes bancaires
+NoAccountAvailable=Aucun compte disponible
+SelectedBankAccount=Compte bancaire sélectionné
+CurrentConfiguration=Configuration actuelle
+AccountNotFound=Compte introuvable 
