--- a/langs/fr_FR/sig.lang
+++ b/langs/fr_FR/sig.lang
@@ -21,4 +21,8 @@ AllBankAccounts=Tous les comptes bancaires
 NoAccountAvailable=Aucun compte disponible
 SelectedBankAccount=Compte bancaire sélectionné
 CurrentConfiguration=Configuration actuelle
-AccountNotFound=Compte introuvable 
+AccountNotFound=Compte introuvable
+SigMarginRate=Taux de marge théorique
+SigMarginRateHelp=Taux de marge à appliquer au CA prévu pour calculer la marge (en %)
+SigPaymentDelay=Délai moyen de paiement attendu
+SigPaymentDelayHelp=Délai en jours entre la livraison et le paiement effectif (décalage de la marge dans la trésorerie)
