--- a/langs/fr_FR/sig.lang
+++ b/langs/fr_FR/sig.lang
@@ -26,3 +26,12 @@ SigMarginRate=Taux de marge théorique
 SigMarginRateHelp=Taux de marge à appliquer au CA prévu pour calculer la marge (en %)
 SigPaymentDelay=Délai moyen de paiement attendu
 SigPaymentDelayHelp=Délai en jours entre la livraison et le paiement effectif (décalage de la marge dans la trésorerie)
+SigTreasurySection=Section Trésorerie
+SigIncludeSupplierInvoices=Inclure les factures fournisseurs
+SigIncludeSupplierInvoicesHelp=Cocher pour inclure les factures fournisseurs dans le calcul de trésorerie. Décocher pour les exclure.
+SigIncludeSocialCharges=Inclure les charges sociales
+SigIncludeSocialChargesHelp=Cocher pour inclure les charges sociales (URSSAF, retraite, etc.) dans le calcul de trésorerie. Décocher pour les exclure.
+SigIncludeSignedQuotes=Inclure les devis signés
+SigIncludeSignedQuotesHelp=Cocher pour inclure les devis signés dans les encaissements à venir (marge avec délai de paiement). Décocher pour les exclure.
+SigIncludeCustomerInvoices=Inclure les factures client impayées
+SigIncludeCustomerInvoicesHelp=Cocher pour inclure les factures client impayées dans les encaissements à venir (basé sur la date de règlement prévue). Décocher pour les exclure.
