--- a/langs/fr_FR/sig.lang
+++ b/langs/fr_FR/sig.lang
@@ -37,3 +37,5 @@ SigIncludeCustomerInvoices=Inclure les factures client impayées
 SigIncludeCustomerInvoicesHelp=Cocher pour inclure les factures client impayées dans les encaissements à venir (basé sur la date de règlement prévue). Décocher pour les exclure.
 SigIncludeUnpaidSalaries=Inclure les salaires impayés
 SigIncludeUnpaidSalariesHelp=Cocher pour inclure les salaires impayés dans les décaissements à venir (basé sur la date de paiement prévue). Décocher pour les exclure.
+SigIncludeCustomerTemplateInvoices=Inclure les factures modèle client
+SigIncludeCustomerTemplateInvoicesHelp=Cocher pour inclure les factures modèle client (récurrentes) dans les encaissements à venir. Décocher pour les exclure.
